# django-recipes

./: .env-example  .gitignore  manage.py  mypy.ini  pyproject.toml  pytest.ini
authors/: constants.py  forms.py  models.py  urls.py  views.py
authors/forms/: __init__.py  login.py  recipe_form.py  register_form.py
authors/templates/authors/pages/: dashboard.html  dashboard_recipe.html  login.html  register_view.html
authors/templates/authors/partials/: login_message.html
authors/tests/: test_author_register_form.py  test_authors_logout.py
authors/views/: __init__.py  all.py  dashboard_recipe.py
base_static/global/css/: global-style.css  style.css
base_static/global/js/: script.js
base_templates/global/: base.html
base_templates/global/partials/: form.html  head.html  messages.html  pagination.html  search.html
core/: settings.py  urls.py
recipes/: admin.py  apps.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_recipe_servings_unit.py  0004_rename_praparation_steps_recipe_preparation_steps_and_more.py  0005_alter_recipe_servings.py  0006_alter_recipe_slug.py
recipes/static/recipes/css/: style.css
recipes/templates/recipes/pages/: category.html  home.html  recipe-view.html  search.html
recipes/templates/recipes/partials/: footer.html  head.html  recipe.html  search.html
recipes/tests/: test_recipe_base.py  test_recipe_model_recipe.py  test_recipe_url.py  test_recipe_views.py
recipes/tests/models/: test_model_category.py  test_model_recipe.py
recipes/tests/views/: test_view_category.py  test_view_detail.py  test_view_home.py  test_view_search.py
recipes/utils/: pagination.py  test_pagination.py
tests/functional_tests/: test_recipe_home_page.py
tests/functional_tests/authors/: base.py  test_authors_login.py  test_authors_register.py
tests/functional_tests/recipes/: base.py  test_recipe_home_page.py
utils/: browser.py  django_forms.py  pagination.py  test_pagination.py  validators.py
