[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
faker = "^37.3.0"
pillow = "^11.2.1"
pytest = "^8.3.5"
pytest-django = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true


[tool.pyrefly]
python_interpreter = "/home/jonas/.cache/pypoetry/virtualenvs/project1-my0NZDiB-py3.12/bin/python"

[tool.pyrefly.errors]
missing-attribute = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = "test.py tests.py test_*.py *_test.py tests_*.py *_tests.py" # Opcional: padrões de arquivos de teste
addopts = """
    --doctest-modules 
    --strict-markers
    """
markers = [
    "slow: Run tests that are slow",
    "fast: Run fast tests"
]
