[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
faker = "^37.3.0"
pillow = "^11.2.1"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
python-decouple = "^3.8"
django-stubs = "^5.2.2"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
parameterized = "^0.9.0"
coverage = "^7.9.1"
django-stubs = "^5.2.1"
mypy-extensions = "^1.1.0"
mypy = "^1.16.1"
selenium = "^4.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyrefly.errors]
missing-attribute = false
bad-assignment = false
bad-return = false
unknown-name = false
bad-argument-type = false

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
show-fixes = true
indent-width = 4
exclude = ["__pycache__", "migrations", ".venv"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DJ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
# ignore = ["T201", "COM812", "F401"]
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["."]
exclude = ["**/__pycache__"]
reportAttributeAccessIssue = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"

[tool.coverage.run]
branch = true
omit = [
    "venv/*",
    "**/*test*.py",
    "manage.py",
    "**/migrations/*.py",
    "utils/browser.py",
]